--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Stardust" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/images/galaxy.png" />
-    <link rel="apple-touch-icon" href="/images/galaxy.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <title>scar</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script defer type="module" src="/src/entry/index.jsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Stardust" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" href="/images/galaxy.png" />
+		<link rel="apple-touch-icon" href="/images/galaxy.png" />
+		<link rel="manifest" href="/manifest.json" />
+		<title>Stardust</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script defer type="module" src="/src/entry/index.jsx"></script>
+	</body>
 </html>
