Refactor source tree

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="description" content="Stardust" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="/images/galaxy.png" />
-		<link rel="apple-touch-icon" href="/images/galaxy.png" />
+		<link rel="icon" href="/galaxy.png" />
+		<link rel="apple-touch-icon" href="/galaxy.png" />
 		<link rel="manifest" href="/manifest.json" />
 		<title>Stardust</title>
 	</head>
